gcc/testsuite/gm2/errors/fail/testnil2.mod
MODULE testnil2 ;

VAR
   c: CARDINAL ;
BEGIN
   NIL (c)
END testnil2.